<resources>
    <string name="app_name">SpaceX Launches</string>

    <!-- Content descriptions -->
    <string name="content_description_launch_image">Launch image</string>
    <string name="content_description_ic_arrow_back">Back</string>
    <string name="content_description_ic_refresh">Refresh</string>

    <!-- ListActivity -->
    <string name="launch_list_btn_new_content_label">New launches found</string>
    <string name="launch_list_msg_empty_state">No launches found</string>
    <string name="launch_list_msg_error_state">Error fetching new data</string>

    <!-- list_item_launch -->
    <string name="list_item_launch_status_upcoming">Upcoming launch</string>
    <string name="list_item_launch_status_success">Launch success</string>
    <string name="list_item_launch_status_failed">Launch failed</string>

    <!-- DetailsActivity -->
    <string name="details_launch_site">Launch site</string>
    <string name="details_launch_site_name">%1$s - %2$s</string>
    <string name="details_rocket">Rocket</string>
    <string name="details_rocket_name">Name: %1$s</string>
    <string name="details_rocket_type">Type: %1$s</string>
    <string name="details_msg_error_initializing_player">Error initializing Youtube player</string>

</resources>
