<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detailsIcBack"
            style="@style/ImageViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_description_ic_arrow_back"
            android:src="@drawable/ic_arrow_back" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/detailsLayoutVideo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/detailsLaunchImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_description_launch_image"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_rocket" />

        <com.google.android.youtube.player.YouTubePlayerView
            android:id="@+id/detailsVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailsInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:padding="@dimen/details_padding">

        <TextView
            android:id="@+id/detailsTextStatus"
            style="@style/TextLaunchStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/list_item_launch_status_padding"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:background="@drawable/bg_success"
            tools:text="Success" />

        <TextView
            android:id="@+id/detailsTextName"
            style="@style/TextLaunchName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/details_horizontal_spacing"
            android:layout_marginBottom="@dimen/list_item_launch_vertical_spacing"
            app:layout_constraintEnd_toStartOf="@id/detailsTextStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Launch name" />

        <TextView
            android:id="@+id/detailsTextDate"
            style="@style/TextLaunchDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_small_vertical_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextName"
            tools:text="Launch date" />

        <TextView
            android:id="@+id/detailsTextLaunchSite"
            style="@style/SectionTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_vertical_spacing"
            android:text="@string/details_launch_site"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextDate" />

        <TextView
            android:id="@+id/detailsTextLaunchSiteName"
            style="@style/TextBodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_launch_site_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextLaunchSite" />

        <TextView
            android:id="@+id/detailsTextRocket"
            style="@style/SectionTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_vertical_spacing"
            android:text="@string/details_rocket"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextLaunchSiteName" />

        <TextView
            android:id="@+id/detailsTextRocketName"
            style="@style/TextBodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_rocket_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextRocket" />

        <TextView
            android:id="@+id/detailsTextRocketType"
            style="@style/TextBodyLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_rocket_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/detailsTextRocketName" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>